Add support to UploadeFile as parameter

--- a/tests/App/templates/test.html.twig
+++ b/tests/App/templates/test.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.twig.html' %}
+{% extends 'layout.html.twig' %}
 {% block content %}
 <p>This is a test template</p>
 {% endblock %}
